Update addons/common/persistence/jdbc/src/main/java/org/kie/kogito/persistence/jdbc/FileLoader.java
Co-authored-by: Daniele Zonca <dzonca@redhat.com>